# CompressMGARDMeshToGridOperator

./: CMakeLists.txt  CompressMGARDMeshToGridOperator.cpp  CompressMGARDMeshToGridOperator.h  CompressMGARDMeshToGridOperator_GPU.hpp  HOWTO  LosslessCompression.hpp  README.md  runconf  runconf_cpu  runconf_cuda  runconf_hip
